search multi words and handle misspellings using external libraries
loom: https://www.loom.com/share/f886dc3b6d474ee9ad07471af5e92d8a

--- a/static/index.html
+++ b/static/index.html
@@ -11,15 +11,16 @@
 <body>
     <p>
         <form id="form">
-            <label for="query">Query</label>
+            <label for="query">Query enter</label>
             <input type="text" id="query" name="query">
             <button type="submit">Search</button>
         </form>
     </p>
+    <div id="did-you-mean"></div>
     <p>
-        <table id="table">
-          <tbody id="table-body"></tbody>
-        </table>
+      <table id="table">
+        <tbody id="table-body"></tbody>
+      </table>
     </p>
   <script src="app.js"></script>
 </body>
